bin/logs/error.log
2020-02-26T14:09:33.852Z | error | general error sent from app.js - Not Found
2020-02-26T15:46:10.122Z | error | general error sent from app.js - Parse error on line 5:
... header }}  {{> /stats/subheader }}
---------------------^
Expecting 'OPEN_SEXPR', 'ID', 'STRING', 'NUMBER', 'BOOLEAN', 'UNDEFINED', 'NULL', 'DATA', got 'SEP'
2020-02-26T16:59:26.683Z | error | general error sent from app.js - Not Found
2020-02-27T16:18:43.776Z | error | general error sent from app.js - Not Found
2020-02-28T14:49:51.172Z | error | general error sent from app.js - Not Found
2020-02-28T18:48:10.675Z | error | general error sent from app.js - Not Found
2020-02-29T01:33:03.352Z | error | general error sent from app.js - Not Found
2020-02-29T01:33:03.930Z | error | general error sent from app.js - Not Found
2020-02-29T01:33:58.580Z | error | general error sent from app.js - Not Found
2020-02-29T01:33:58.672Z | error | general error sent from app.js - Not Found
2020-02-29T02:51:06.639Z | error | general error sent from app.js - Not Found
2020-02-29T02:51:07.165Z | error | general error sent from app.js - Not Found
2020-02-29T03:37:34.990Z | error | general error sent from app.js - Not Found
2020-02-29T03:37:35.242Z | error | general error sent from app.js - Not Found
2020-02-29T03:39:20.378Z | error | general error sent from app.js - Not Found
2020-02-29T03:39:20.560Z | error | general error sent from app.js - Not Found
2020-02-29T03:39:34.055Z | error | general error sent from app.js - Not Found
2020-02-29T03:39:34.229Z | error | general error sent from app.js - Not Found
2020-02-29T03:41:10.924Z | error | general error sent from app.js - Unexpected token o in JSON at position 1
2020-02-29T03:41:28.544Z | error | general error sent from app.js - Unexpected token o in JSON at position 1
2020-02-29T03:44:06.369Z | error | general error sent from app.js - Unexpected token o in JSON at position 1
2020-02-29T03:44:45.295Z | error | general error sent from app.js - Unexpected token o in JSON at position 1
2020-02-29T03:45:38.531Z | error | general error sent from app.js - Unexpected token o in JSON at position 1
2020-02-29T03:45:46.325Z | error | general error sent from app.js - Unexpected token o in JSON at position 1
2020-02-29T03:46:37.209Z | error | general error sent from app.js - Unexpected token o in JSON at position 1
2020-02-29T03:48:00.466Z | error | general error sent from app.js - Unexpected token o in JSON at position 1
2020-02-29T03:49:32.600Z | error | general error sent from app.js - Unexpected token o in JSON at position 1
2020-02-29T03:49:40.638Z | error | general error sent from app.js - Unexpected token o in JSON at position 1
2020-02-29T03:50:19.710Z | error | general error sent from app.js - Unexpected token o in JSON at position 1
2020-02-29T03:51:00.162Z | error | general error sent from app.js - Unexpected token o in JSON at position 1
2020-02-29T03:51:17.869Z | error | general error sent from app.js - Unexpected token o in JSON at position 1
2020-03-03T03:38:29.493Z | error | general error sent from app.js - Not Found
2020-03-03T03:38:30.102Z | error | general error sent from app.js - Not Found
2020-03-03T03:38:44.727Z | error | general error sent from app.js - Unexpected token o in JSON at position 1
2020-03-03T03:47:11.729Z | error | general error sent from app.js - Unexpected token o in JSON at position 1
2020-03-03T03:52:53.397Z | error | general error sent from app.js - Unexpected token o in JSON at position 1
2020-03-03T03:52:57.979Z | error | general error sent from app.js - Unexpected token o in JSON at position 1
2020-03-03T03:53:09.279Z | error | general error sent from app.js - Unexpected token o in JSON at position 1
2020-03-03T03:54:30.148Z | error | general error sent from app.js - Unexpected token o in JSON at position 1
2020-03-03T03:56:15.854Z | error | general error sent from app.js - Unexpected token o in JSON at position 1
2020-03-03T03:59:36.859Z | error | general error sent from app.js - Unexpected token o in JSON at position 1
2020-06-03T02:34:51.192Z | error | general error sent from app.js - Not Found
2020-06-03T02:38:25.617Z | error | general error sent from app.js - Not Found
2020-06-03T02:40:31.222Z | error | There was an error: incorrectKey
2020-06-03T02:40:35.547Z | error | There was an error: incorrectKey
2020-06-03T03:01:17.231Z | error | Could not read the destination directory: Error: ENOENT: no such file or directory, scandir 'C:\Users\jhoop\public_html\seo-term'
2020-06-03T03:26:03.881Z | error | Could not read the destination directory: Error: ENOENT: no such file or directory, scandir 'C:\Users\jhoop\public_html\seo-term'
2020-06-03T03:41:17.934Z | error | E:\work\nearbyNow\data\saveData.js:154
    const exists = await this.database.readPool(checkQuery);
                   ^^^^^

SyntaxError: await is only valid in async function
    at wrapSafe (internal/modules/cjs/loader.js:1101:16)
    at Module._compile (internal/modules/cjs/loader.js:1149:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1205:10)
    at Module.load (internal/modules/cjs/loader.js:1034:32)
    at Function.Module._load (internal/modules/cjs/loader.js:923:14)
    at Module.require (internal/modules/cjs/loader.js:1074:19)
    at require (internal/modules/cjs/helpers.js:72:18)
    at Object.<anonymous> (E:\work\nearbyNow\data\cityCheck.js:2:11)
    at Module._compile (internal/modules/cjs/loader.js:1185:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1205:10)
2020-06-03T03:41:20.880Z | error | E:\work\nearbyNow\data\saveData.js:154
    const exists = await this.database.readPool(checkQuery);
                   ^^^^^

SyntaxError: await is only valid in async function
    at wrapSafe (internal/modules/cjs/loader.js:1101:16)
    at Module._compile (internal/modules/cjs/loader.js:1149:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1205:10)
    at Module.load (internal/modules/cjs/loader.js:1034:32)
    at Function.Module._load (internal/modules/cjs/loader.js:923:14)
    at Module.require (internal/modules/cjs/loader.js:1074:19)
    at require (internal/modules/cjs/helpers.js:72:18)
    at Object.<anonymous> (E:\work\nearbyNow\data\cityCheck.js:2:11)
    at Module._compile (internal/modules/cjs/loader.js:1185:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1205:10)
2020-06-03T03:42:47.384Z | error | E:\work\nearbyNow\data\saveData.js:154
    const exists = await this.database.readPool(checkQuery);
                   ^^^^^

SyntaxError: await is only valid in async function
    at wrapSafe (internal/modules/cjs/loader.js:1101:16)
    at Module._compile (internal/modules/cjs/loader.js:1149:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1205:10)
    at Module.load (internal/modules/cjs/loader.js:1034:32)
    at Function.Module._load (internal/modules/cjs/loader.js:923:14)
    at Module.require (internal/modules/cjs/loader.js:1074:19)
    at require (internal/modules/cjs/helpers.js:72:18)
    at Object.<anonymous> (E:\work\nearbyNow\data\cityCheck.js:2:11)
    at Module._compile (internal/modules/cjs/loader.js:1185:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1205:10)
2020-06-03T03:43:17.553Z | error | Could not read the destination directory: Error: ENOENT: no such file or directory, scandir 'C:\Users\jhoop\public_html\seo-term'
2020-06-03T03:44:35.698Z | error | Could not read the destination directory: Error: ENOENT: no such file or directory, scandir 'C:\Users\jhoop\public_html\seo-term'
2020-06-03T03:45:59.909Z | error | Could not read the destination directory: Error: ENOENT: no such file or directory, scandir 'C:\Users\jhoop\public_html\seo-term'
2020-06-03T03:48:10.240Z | error | Could not read the destination directory: Error: ENOENT: no such file or directory, scandir 'C:\Users\jhoop\public_html\seo-term'
2020-06-03T03:52:21.305Z | error | Could not read the destination directory: Error: ENOENT: no such file or directory, scandir 'C:\Users\jhoop\public_html\seo-term'
2020-06-03T03:54:29.391Z | error | Could not read the destination directory: Error: ENOENT: no such file or directory, scandir 'C:\Users\jhoop\public_html\seo-term'
2020-06-03T03:55:10.257Z | error | Could not read the destination directory: Error: ENOENT: no such file or directory, scandir 'C:\Users\jhoop\public_html\seo-term'
